--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ shap/_cext.cpython-36m-darwin.so
 shap/_cext.cpython-35m-darwin.so
 javascript/build/*
 .vscode
-shap/_cext.so
+ishap/_cext.so
+.DS_Store
